// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="c-7saf soui-textarea-wrapper c-os3a9d soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="c-7saf soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px; height: 0px;"
  />
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea c-r91zbq soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="c-7saf soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="c3pvx0j soui-textarea-wrapper-padding-box c-xaj8uz soui-textarea-footer"
  >
    <div
      style="text-align: right;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="c-7saf soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="c-7saf soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-7saf soui-textarea-wrapper c-okza82 soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="c-7saf soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="c-7saf soui-textarea-wrapper c-op15qm soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c3pvx0j soui-textarea-wrapper-padding-box ccav89i soui-textarea-wrapper-inner-title-bottom chloww4 soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
